--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Assignment - 6</title>
+    <title>Vintage-Forum</title>
+    <!-- Font-Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <!-- Daisy-Ui / Tailwind-CSS -->
     <link
       href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css"
@@ -12,16 +20,115 @@
     />
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="w-[1280px] m-auto">Header</header>
-    <main class="w-[1280px] m-auto">
-        <h2>Main</h2>
+    <!-- Header Area Start -->
+    <header class="w-[90%] md:w-[80%] mx-auto">
+      <!-- Nav Area -->
+      <nav class="py-4 lg:py-12">
+        <div class="navbar">
+          <div class="navbar-start">
+            <div class="dropdown">
+              <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  class="h-5 w-5"
+                  fill="none"
+                  viewBox="0 0 24 24"
+                  stroke="currentColor"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M4 6h16M4 12h8m-8 6h16"
+                  />
+                </svg>
+              </div>
+              <ul
+                tabindex="0"
+                class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
+              >
+              <li><i class="fa-solid fa-house"> <span class="font-mulish">Home</span></i></li>
+              <li><i class="fa-solid fa-pen"> <span class="font-mulish">Blog</span></i></li>
+              <li><i class="fa-solid fa-user"> <span class="font-mulish">Service</span></i></li>
+              <li><i class="fa-solid fa-flag"> <span class="font-mulish">Contact</span></i></li>
+              </ul>
+            </div>
+            <a class="btn btn-ghost text-xl md:text-4xl font-black text-[#12132D]"
+              >VinTage</a
+            >
+          </div>
+          <div class="navbar-end">
+            <div class="navbar-center hidden lg:flex">
+              <ul class="menu menu-horizontal px-5 gap-5">
+                <div class="tooltip" data-tip="Home">
+                    <li><i class="fa-solid fa-house border border-[#999]"></i></li>
+                  </div>
+                <div class="tooltip" data-tip="Blog">
+                    <li><i class="fa-solid fa-pen border border-[#999]"></i></li>
+                  </div>
+                <div class="tooltip" data-tip="Service">
+                    <li><i class="fa-solid fa-user border border-[#999]"></i></li>
+                  </div>
+                <div class="tooltip" data-tip="Contact">
+                    <li><i class="fa-solid fa-flag border border-[#999]"></i></li>
+                  </div>
+              </ul>
+            </div>
+            <button class="btn font-bold px-5 md:px-11 text-md md:text-xl bg-[#797dfc] rounded-full">Sign In</button>
+            
+          </div>
+        </div>
+      </nav>
+      <!-- Banner Area -->
+      <div class="min-h-[550px] bg-[#12132D] rounded-3xl p-10 lg:p-24 flex items-center relative">
+            <div class="lg:flex lg:justify-around w-full">
+              <div class=" text-white ">
+                <h1 class="text-3xl lg:text-[64px] font-black leading-10 lg:leading-[80px]">Welcome to the <br>
+                    <span class="text-[#484a74]">VinTage</span> Forum</h1>
+                <p class="text-[20px] font-medium leading-[36px] py-6">Share your favorite opinion and win and Vintage Forum <br>coffee mug!</p>
+                <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Responsive</button>
+              </div>
+              <div class="banner-area w-full lg:w-1/3 p-6 lg:p-12 rounded-3xl bg-white flex flex-col justify-around">
+                <div class="flex items-center justify-between">
+                    <p>Registered Users</p>
+                    <p>05</p>
+                </div>
+                <div class="flex items-center justify-between">
+                    <p>Forum</p>
+                    <p>05</p>
+                </div>
+                <div class="flex items-center justify-between">
+                    <p>Topics</p>
+                    <p>05</p>
+                </div>
+                <div class="flex items-center justify-between">
+                    <p>Replies</p>
+                    <p>05</p>
+                </div>
+              </div>
+            </div>
+      </div>
+
+    </header>
+    <!-- Header Area End -->
+
+    <!-- Main Area Start -->
+    <main class="w-[95%] md:w-[80%] mx-auto bg-lime-200">
+      <h2>Main</h2>
     </main>
-    <footer>
-        <h2>Footer</h2>
+    <!-- Main Area End -->
+
+    <!-- Footer Area Start -->
+    <footer class="bg-black text-white py-5">
+      <div class="w-[95%] md:w-[80%] mx-auto">Footer Bottom</div>
+      <div class="w-[95%] md:w-[80%] mx-auto">Footer Top</div>
     </footer>
+    <!-- Footer Area End -->
+
+    <!-- Script -->
     <script src="./js/scripts.js"></script>
   </body>
 </html>
