--- a/index.html
+++ b/index.html
@@ -50,13 +50,30 @@
                 tabindex="0"
                 class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52"
               >
-              <li><i class="fa-solid fa-house"> <span class="font-mulish">Home</span></i></li>
-              <li><i class="fa-solid fa-pen"> <span class="font-mulish">Blog</span></i></li>
-              <li><i class="fa-solid fa-user"> <span class="font-mulish">Service</span></i></li>
-              <li><i class="fa-solid fa-flag"> <span class="font-mulish">Contact</span></i></li>
+                <li>
+                  <i class="fa-solid fa-house">
+                    <span class="font-mulish">Home</span></i
+                  >
+                </li>
+                <li>
+                  <i class="fa-solid fa-pen">
+                    <span class="font-mulish">Blog</span></i
+                  >
+                </li>
+                <li>
+                  <i class="fa-solid fa-user">
+                    <span class="font-mulish">Service</span></i
+                  >
+                </li>
+                <li>
+                  <i class="fa-solid fa-flag">
+                    <span class="font-mulish">Contact</span></i
+                  >
+                </li>
               </ul>
             </div>
-            <a class="btn btn-ghost text-xl md:text-4xl font-black text-[#12132D]"
+            <a
+              class="btn btn-ghost text-xl md:text-4xl font-black text-[#12132D]"
               >VinTage</a
             >
           </div>
@@ -64,54 +81,75 @@
             <div class="navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal px-5 gap-5">
                 <div class="tooltip" data-tip="Home">
-                    <li><i class="fa-solid fa-house border border-[#999]"></i></li>
-                  </div>
+                  <li>
+                    <i class="fa-solid fa-house border border-[#999]"></i>
+                  </li>
+                </div>
                 <div class="tooltip" data-tip="Blog">
-                    <li><i class="fa-solid fa-pen border border-[#999]"></i></li>
-                  </div>
+                  <li><i class="fa-solid fa-pen border border-[#999]"></i></li>
+                </div>
                 <div class="tooltip" data-tip="Service">
-                    <li><i class="fa-solid fa-user border border-[#999]"></i></li>
-                  </div>
+                  <li><i class="fa-solid fa-user border border-[#999]"></i></li>
+                </div>
                 <div class="tooltip" data-tip="Contact">
-                    <li><i class="fa-solid fa-flag border border-[#999]"></i></li>
-                  </div>
+                  <li><i class="fa-solid fa-flag border border-[#999]"></i></li>
+                </div>
               </ul>
             </div>
-            <button class="btn font-bold px-5 md:px-11 text-md md:text-xl bg-[#797dfc] rounded-full">Sign In</button>
-            
+            <button
+              class="btn font-bold px-5 md:px-11 text-md md:text-xl bg-[#797dfc] rounded-2xl"
+            >
+              Sign In
+            </button>
           </div>
         </div>
       </nav>
       <!-- Banner Area -->
-      <div class="min-h-[550px] bg-[#12132D] rounded-3xl p-10 lg:p-24 flex items-center relative">
-            <div class="lg:flex lg:justify-around w-full">
-              <div class=" text-white ">
-                <h1 class="text-3xl lg:text-[64px] font-black leading-10 lg:leading-[80px]">Welcome to the <br>
-                    <span class="text-[#484a74]">VinTage</span> Forum</h1>
-                <p class="text-[20px] font-medium leading-[36px] py-6">Share your favorite opinion and win and Vintage Forum <br>coffee mug!</p>
-                <button class="btn btn-xs sm:btn-sm md:btn-md lg:btn-lg">Responsive</button>
-              </div>
-              <div class="banner-area w-full lg:w-1/3 p-6 lg:p-12 rounded-3xl bg-white flex flex-col justify-around">
-                <div class="flex items-center justify-between">
-                    <p>Registered Users</p>
-                    <p>05</p>
-                </div>
-                <div class="flex items-center justify-between">
-                    <p>Forum</p>
-                    <p>05</p>
-                </div>
-                <div class="flex items-center justify-between">
-                    <p>Topics</p>
-                    <p>05</p>
-                </div>
-                <div class="flex items-center justify-between">
-                    <p>Replies</p>
-                    <p>05</p>
-                </div>
-              </div>
+      <div
+        class="min-h-[550px] bg-[#12132D] rounded-3xl p-10 lg:p-24 flex items-center relative"
+      >
+        <div class="lg:flex lg:justify-around w-full">
+          <div class="text-white">
+            <h1
+              class="text-3xl lg:text-[64px] font-black leading-10 lg:leading-[80px]"
+            >
+              Welcome to the <br />
+              <span class="text-[#484a74]">VinTage</span> Forum
+            </h1>
+            <p class="text-[20px] font-medium leading-[36px] py-6">
+              Share your favorite opinion and win and Vintage Forum <br />coffee
+              mug!
+            </p>
+            <!-- Input / Button -->
+            <div class="relative">
+                <input type="text" placeholder="Search here anything" class="input w-full rounded-2xl" />
+              <button class="btn  sm:btn-sm md:btn-md text-md md:text-xl bg-[#797dfc] rounded-2xl absolute right-0">
+                Search
+              </button>
             </div>
+          </div>
+          <div
+            class="banner-area w-full lg:w-1/3 p-6 lg:p-12 mt-4 lg:mt-0 rounded-3xl bg-white flex flex-col justify-around"
+          >
+            <div class="flex items-center justify-between">
+              <p>Registered Users</p>
+              <p>05</p>
+            </div>
+            <div class="flex items-center justify-between">
+              <p>Forum</p>
+              <p>05</p>
+            </div>
+            <div class="flex items-center justify-between">
+              <p>Topics</p>
+              <p>05</p>
+            </div>
+            <div class="flex items-center justify-between">
+              <p>Replies</p>
+              <p>05</p>
+            </div>
+          </div>
+        </div>
       </div>
-
     </header>
     <!-- Header Area End -->
 
