--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <!-- Header Area Start -->
     <header class="w-[90%] md:w-[80%] mx-auto">
-      <!-- Nav Area -->
+      <!-- Navbar Area -->
       <nav class="py-4 lg:py-12">
         <div class="navbar">
           <div class="navbar-start">
@@ -105,7 +105,7 @@
         </div>
       </nav>
       <!-- Banner Area -->
-      <div
+      <banner
         class="min-h-[550px] bg-[#12132D] rounded-3xl p-10 lg:p-24 flex items-center relative"
       >
         <div class="lg:flex lg:justify-around w-full">
@@ -116,14 +116,22 @@
               Welcome to the <br />
               <span class="text-[#484a74]">VinTage</span> Forum
             </h1>
-            <p class="text-[20px] font-medium leading-[36px] py-6">
+            <p
+              class="text-[18px] lg:text-[20px] font-medium leading-[36px] py-6"
+            >
               Share your favorite opinion and win and Vintage Forum <br />coffee
               mug!
             </p>
             <!-- Input / Button -->
             <div class="relative">
-                <input type="text" placeholder="Search here anything" class="input w-full rounded-2xl" />
-              <button class="btn  sm:btn-sm md:btn-md text-md md:text-xl bg-[#797dfc] rounded-2xl absolute right-0">
+              <input
+                type="text"
+                placeholder="Search here anything"
+                class="input w-full rounded-2xl text-black text-base lg:text-xl"
+              />
+              <button
+                class="btn sm:btn-sm md:btn-md text-md md:text-xl bg-[#797dfc] rounded-2xl absolute right-0"
+              >
                 Search
               </button>
             </div>
@@ -149,20 +157,47 @@
             </div>
           </div>
         </div>
-      </div>
+      </banner>
     </header>
     <!-- Header Area End -->
 
     <!-- Main Area Start -->
-    <main class="w-[95%] md:w-[80%] mx-auto bg-lime-200">
-      <h2>Main</h2>
+    <main class="w-[90%] md:w-[80%] mx-auto">
+      <!-- Discuss Section -->
+      <section class="text-center my-24">
+        <h2 class="text-4xl font-black leading-9">Let's Discuss</h2>
+        <p class="text-lg leading-8 text-[#12132D99]">
+          Yes, you can run unit tests and view the results directly within the
+          app. The integrated <br />testing features allow for a streamlined.
+        </p>
+
+        <div class="flex">
+          <!-- Discus-left -->
+          <div class="w-2/3 p-10 flex bg-[#797DFC1A] ">
+            <div class="">
+              <img class="w-10 h-10" src="./images/joinforum.png" alt="" />
+            </div>
+            <div class="w-full flex gap-10">
+                <div>
+                    <p># <span>Music</span></p>
+                </div>
+                <div>
+                    <p>Author: <span>Name</span></p>
+                </div>
+            </div>
+          </div>
+
+          <!-- Discus-right -->
+          <div class="w-1/3">title</div>
+        </div>
+      </section>
     </main>
     <!-- Main Area End -->
 
     <!-- Footer Area Start -->
     <footer class="bg-black text-white py-5">
-      <div class="w-[95%] md:w-[80%] mx-auto">Footer Bottom</div>
-      <div class="w-[95%] md:w-[80%] mx-auto">Footer Top</div>
+      <div class="w-[90%] md:w-[80%] mx-auto">Footer Bottom</div>
+      <div class="w-[90%] md:w-[80%] mx-auto">Footer Top</div>
     </footer>
     <!-- Footer Area End -->
 
