--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body>
+  <body class="font-mulish">
     <!-- Header Area Start -->
     <header class="w-[90%] md:w-[80%] mx-auto">
       <!-- Navbar Area -->
@@ -106,7 +106,7 @@
       </nav>
       <!-- Banner Area -->
       <banner
-        class="min-h-[550px] bg-[#12132D] rounded-3xl p-10 lg:p-24 flex items-center relative"
+        class="min-h-[550px] bg-image bg-[#12132D] rounded-3xl p-10 lg:p-24 flex items-center relative"
       >
         <div class="lg:flex lg:justify-around w-full">
           <div class="text-white">
@@ -162,42 +162,216 @@
     <!-- Header Area End -->
 
     <!-- Main Area Start -->
-    <main class="w-[90%] md:w-[80%] mx-auto">
+    <main class="w-[95%] md:w-[80%] mx-auto">
       <!-- Discuss Section -->
-      <section class="text-center my-24">
-        <h2 class="text-4xl font-black leading-9">Let's Discuss</h2>
-        <p class="text-lg leading-8 text-[#12132D99]">
-          Yes, you can run unit tests and view the results directly within the
-          app. The integrated <br />testing features allow for a streamlined.
-        </p>
-
-        <div class="flex">
+      <section class="my-16 lg:my-24">
+        <div class="text-center">
+          <h2 class="text-4xl font-black leading-9">Let's Discuss</h2>
+          <p class="py-6 text-lg leading-8 text-[#12132D99]">
+            Yes, you can run unit tests and view the results directly within the
+            app. The integrated <br />testing features allow for a streamlined.
+          </p>
+        </div>
+        <div class="mt-10 lg:flex lg:space-x-6">
           <!-- Discus-left -->
-          <div class="w-2/3 p-10 flex bg-[#797DFC1A] ">
-            <div class="">
-              <img class="w-10 h-10" src="./images/joinforum.png" alt="" />
+          <div
+            class="md:w-2/3 p-6 md:p-8 lg:10 md:flex bg-[#797DFC1A] rounded-3xl space-y-2 md:space-x-6 border border-[#797DFC] font-inter"
+          >
+            <div class="w-1/5 md:w-2/5 h-auto bg-white rounded-2xl relative">
+              <img class="w-full" src="./images/joinforum.png" alt="" />
+              <div
+                class="h-5 w-5 rounded-full bg-green-500 absolute -top-2 -right-2"
+              ></div>
             </div>
-            <div class="w-full flex gap-10">
-                <div>
-                    <p># <span>Music</span></p>
-                </div>
-                <div>
-                    <p>Author: <span>Name</span></p>
-                </div>
+            <div class="space-y-2">
+              <div class="w-full flex gap-10 text-sm font-medium">
+                <p># <span>Music</span></p>
+                <p>Author: <span>Name</span></p>
+              </div>
+              <h2 class="text-lg lg:text-xl font-bold font-mulish">
+                10 Kids Unaware of Their Halloween Costume
+              </h2>
+              <p
+                class="pb-5 border-b-2 border-dashed border-[#12132D40] text-[#12132D99]"
+              >
+                It's one thing to subject yourself to ha Halloween costume
+                mishap because, hey that's your prerogative
+              </p>
+              <div class="pt-2 lg:pt-5 flex justify-between">
+                <d|iv class="flex items-center gap-5">
+                  <div class="space-x-4">
+                    <i class="fa-regular fa-envelope"></i><span>560</span>
+                  </div>
+                  <div class="space-x-4">
+                    <i class="fa-regular fa-eye"></i><span>1560</span>
+                  </div>
+                  <div class="space-x-4">
+                    <i class="fa-regular fa-clock"></i><span>5 min</span>
+                  </div>
+                </d|iv>
+                <button class="rounded-full btn bg-green-500">
+                  <i
+                    class="fa-regular fa-envelope-open rounded-full text-white text-xs md:text-base"
+                  ></i>
+                </button>
+              </div>
             </div>
           </div>
 
           <!-- Discus-right -->
-          <div class="w-1/3">title</div>
+          <div class="mt-10 md:mt-0 md:w-1/3 bg-[#12132D0D] rounded-3xl p-6">
+            <div class="flex justify-between pb-4">
+              <h2 class="text-xl font-bold">Title</h2>
+              <div class="flex items-center space-x-3 text-2xl">
+                <i class="fa-solid fa-check-double text-green-500"></i>
+                <h3 class="text-[#12132D99]">Mark as read (<span>4</span>)</h3>
+              </div>
+            </div>
+            <div class="px-4 py-2 flex justify-between bg-white rounded-xl">
+              <h3>10 Kids Unaware of Their Halloween Costume</h3>
+              <div class="flex items-center space-x-1">
+                <i class="fa-regular fa-eye"></i><span>1560</span>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Forum Section -->
+      <section class="bg-[#12132D] rounded-3xl md:p-20 md:pb-10 py-5">
+        <div class="hero-content flex-col lg:flex-row-reverse">
+          <img src="/images/joinforum.png" class="max-w-sm rounded-lg" />
+          <div class="text-white text-center lg:text-left">
+            <h1 class="text-3xl lg:text-5xl font-black font-mulish">
+              Join Our Forum
+            </h1>
+            <p class="py-6 text-sm lg:text-xl">
+              Join Our Forum today to connect with like-minded individuals,
+              share ideas, and engage in meaningful discussions. Expand your
+              network and knowledge with us!
+            </p>
+            <button class="btn btn-primary btn-sm md:btn-lg bg-[#797dfc]">
+              Registered Now
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <!-- Posts Section -->
+      <section class="my-16 lg:my-24">
+        <div class="text-center">
+          <h2 class="text-4xl font-black leading-9">Latest Posts</h2>
+          <p class="py-6 text-lg leading-8 text-[#12132D99]">
+            The latest post is about the impact of technology on society,
+            exploring both positive <br />
+            and negative effects in various aspects of daily life.
+          </p>
+        </div>
+
+        <!-- Posts Card -->
+        <div class="pt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+          <!-- Single Card -->
+          <div class="card border-2 border-[#12132D26]">
+            <figure><img src="images/joinforum.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <div class="flex items-center gap-5 text-[#12132D99]">
+                <i class="fa-regular fa-calendar-days"></i>
+                <p>21 Oct 1992</p>
+              </div>
+              <h2 class="card-title text-lg font-extrabold font-mulish">
+                What will a mars habitat force that impact in our daily life!!!
+              </h2>
+              <p class="pb-4">
+                Yes, you can run unit tests and view the results directly within
+                the app.
+              </p>
+              <div class="card-actions">
+                <div class="">
+                  <img src="images/Ellipse.png" alt="" />
+                </div>
+                <div>
+                  <h4 class="font-bold">Cameron Williamson</h4>
+                  <p>ROR Developer</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card border-2 border-[#12132D26]">
+            <figure><img src="images/joinforum.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <div class="flex items-center gap-5 text-[#12132D99]">
+                <i class="fa-regular fa-calendar-days"></i>
+                <p>21 Oct 1992</p>
+              </div>
+              <h2 class="card-title text-lg font-extrabold font-mulish">
+                What will a mars habitat force that impact in our daily life!!!
+              </h2>
+              <p class="pb-4">
+                Yes, you can run unit tests and view the results directly within
+                the app.
+              </p>
+              <div class="card-actions">
+                <div class="">
+                  <img src="images/Ellipse.png" alt="" />
+                </div>
+                <div>
+                  <h4 class="font-bold">Cameron Williamson</h4>
+                  <p>ROR Developer</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card border-2 border-[#12132D26]">
+            <figure><img src="images/joinforum.png" alt="Shoes" /></figure>
+            <div class="card-body">
+              <div class="flex items-center gap-5 text-[#12132D99]">
+                <i class="fa-regular fa-calendar-days"></i>
+                <p>21 Oct 1992</p>
+              </div>
+              <h2 class="card-title text-lg font-extrabold font-mulish">
+                What will a mars habitat force that impact in our daily life!!!
+              </h2>
+              <p class="pb-4">
+                Yes, you can run unit tests and view the results directly within
+                the app.
+              </p>
+              <div class="card-actions">
+                <div class="">
+                  <img src="images/Ellipse.png" alt="" />
+                </div>
+                <div>
+                  <h4 class="font-bold">Cameron Williamson</h4>
+                  <p>ROR Developer</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
     <!-- Main Area End -->
 
     <!-- Footer Area Start -->
-    <footer class="bg-black text-white py-5">
-      <div class="w-[90%] md:w-[80%] mx-auto">Footer Bottom</div>
-      <div class="w-[90%] md:w-[80%] mx-auto">Footer Top</div>
+    <footer class="bg-[#12132D] text-white py-5">
+      <section
+        class="footer footer-center p-10 rounded"
+      >
+        <div class="">
+          <h2 class="text-xl lg:text-4xl font-black text-[#484a74]">VinTage</h2>
+          <p>The vintage forum is a platform for enthusiasts to discuss and share their passion for classic cars, fashion, music, and more.</p>
+        </div>
+        <nav>
+          <div class="grid grid-flow-col gap-4">
+            <a><i class="fa-brands fa-facebook"></i></a>
+            <a><i class="fa-brands fa-twitter"></i></a>
+            <a><i class="fa-brands fa-instagram"></i></a>
+            <a><i class="fa-brands fa-github"></i></a>
+          </div>
+        </nav>
+        <aside>
+          <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+        </aside>
+      </section>
     </footer>
     <!-- Footer Area End -->
 
