--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
               class="text-3xl lg:text-[64px] font-black leading-10 lg:leading-[80px]"
             >
               Welcome to the <br />
-              <span class="text-[#484a74]">VinTage</span> Forum
+              <span class="text-[#8b90e8]">VinTage</span> Forum
             </h1>
             <p
               class="text-[18px] lg:text-[20px] font-medium leading-[36px] py-6"
@@ -352,24 +352,24 @@
     <!-- Main Area End -->
 
     <!-- Footer Area Start -->
-    <footer class="bg-[#12132D] text-white py-5">
+    <footer class="bg-[#12132D] text-white py-5 ">
       <section
-        class="footer footer-center p-10 rounded"
+        class="footer footer-center p-10 rounded w-[95%] md:w-[80%] mx-auto"
       >
-        <div class="">
-          <h2 class="text-xl lg:text-4xl font-black text-[#484a74]">VinTage</h2>
-          <p>The vintage forum is a platform for enthusiasts to discuss and share their passion for classic cars, fashion, music, and more.</p>
+        <div>
+          <h2 class="text-2xl lg:text-4xl font-black text-[#8b90e8]">VinTage</h2>
+          <p class="pt-5 text-sm md:text-lg">The vintage forum is a platform for enthusiasts to discuss and share their passion <br> for classic cars, fashion, music, and more.</p>
         </div>
-        <nav>
+        <div>
           <div class="grid grid-flow-col gap-4">
             <a><i class="fa-brands fa-facebook"></i></a>
             <a><i class="fa-brands fa-twitter"></i></a>
             <a><i class="fa-brands fa-instagram"></i></a>
             <a><i class="fa-brands fa-github"></i></a>
           </div>
-        </nav>
-        <aside>
-          <p>Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
+        </div>
+        <aside class="border-t-2 w-full pt-10">
+          <p class="text-sm md:text-lg">Copyright © 2024 - All right reserved by ACME Industries Ltd</p>
         </aside>
       </section>
     </footer>
