All area design completed

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 class="input w-full text-black text-lg lg:text-xl"
               />
               <button
-                class="btn btn-sm md:btn-md text-base md:text-xl bg-[#797dfc] text-white rounded-lg absolute right-0"
+                class="btn md:btn-md text-base md:text-xl bg-[#797dfc] text-white rounded-lg absolute right-0"
               >
                 Search
               </button>
