All area design completed

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
       <!-- Forum Section -->
       <section class="bg-[#12132D] rounded-3xl md:p-20 md:pb-10 py-5">
         <div class="hero-content flex-col lg:flex-row-reverse">
-          <img src="/images/joinforum.png" class="max-w-sm rounded-lg" />
+          <img src="/images/joinforum.png" class="max-w-sm rounded-lg border-x-2 border-dashed" />
           <div class="text-white text-center lg:text-left">
             <h1 class="text-3xl lg:text-5xl font-black font-mulish">
               Join Our Forum
@@ -271,7 +271,7 @@
         <!-- Posts Card -->
         <div class="pt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
           <!-- Single Card -->
-          <div class="card border-2 border-[#12132D26]">
+          <div class="card border-2 border-[#12132D26] ">
             <figure><img src="images/joinforum.png" alt="Shoes" /></figure>
             <div class="card-body">
               <div class="flex items-center gap-5 text-[#12132D99]">
