All area design completed

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
     <!-- Footer Area Start -->
     <footer class="bg-[#12132D] text-white py-5">
       <section
-        class="footer footer-center p-10 rounded w-[95%] md:w-[80%] mx-auto"
+        class="footer footer-center p-2 lg:p-10 rounded w-[95%] md:w-[80%] mx-auto"
       >
         <div>
           <h2 class="text-2xl lg:text-4xl font-black text-[#8b90e8]">
@@ -376,7 +376,7 @@
         </div>
         <aside class="border-t-2 w-full pt-10">
           <p class="text-sm md:text-lg">
-            Copyright © 2024 - All right reserved by ACME Industries Ltd
+            Copyright © 2024 - All right reserved by VinTage Forum
           </p>
         </aside>
       </section>
