All design recap

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             app. The integrated <br />testing features allow for a streamlined.
           </p>
         </div>
-        <div class="mt-10 lg:flex lg:space-x-6">
+        <div class="mt-10 md:flex md:space-x-6">
           <!-- Discus-left -->
           <div
             class="md:w-2/3 p-6 md:p-8 lg:10 md:flex bg-[#797DFC1A] rounded-3xl space-y-2 md:space-x-6 border border-[#797DFC] font-inter"
@@ -352,9 +352,9 @@
     <!-- Main Area End -->
 
     <!-- Footer Area Start -->
-    <footer class="bg-[#12132D] text-white py-5">
+    <footer class="bg-[#12132D] text-white py-16">
       <section
-        class="footer footer-center p-2 lg:p-10 rounded w-[95%] md:w-[80%] mx-auto"
+        class="footer footer-center px-2 lg:px-10 rounded w-[95%] md:w-[80%] mx-auto"
       >
         <div>
           <h2 class="text-2xl lg:text-4xl font-black text-[#8b90e8]">
