All design recap compleated

--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
               <span class="text-[#8b90e8]">VinTage</span> Forum
             </h1>
             <p
-              class="text-[18px] lg:text-[20px] font-medium leading-[36px] py-6"
+              class="text-[18px] lg:text-[20px] font-medium leading-[36px] py-6 max-w-[500px]"
             >
-              Share your favorite opinion and win and Vintage Forum <br />coffee
+              Share your favorite opinion and win and Vintage Forum coffee
               mug!
             </p>
             <!-- Input / Button -->
