--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
   <body class="font-mulish">
     <!-- Header Area Start -->
-    <header class="w-[90%] md:w-[80%] mx-auto">
+    <header class="w-[95%] md:w-[80%] mx-auto">
       <!-- Navbar Area -->
       <nav class="py-4 lg:py-12">
         <div class="navbar">
@@ -104,7 +104,7 @@
       </nav>
       <!-- Banner Area -->
       <banner
-        class="min-h-[550px] bg-image bg-[#12132D] rounded-3xl p-10 lg:p-24 flex items-center relative"
+        class="min-h-[500px] text-center md:text-left bg-image bg-[#12132D] rounded-3xl p-6 lg:p-24 flex items-center relative"
       >
         <div class="lg:flex lg:justify-around w-full">
           <div class="text-white">
