All design recap

--- a/index.html
+++ b/index.html
@@ -79,18 +79,34 @@
           </div>
           <div class="navbar-end">
             <div class="navbar-center hidden lg:flex">
-              <div class="menu menu-horizontal px-5 gap-5 text-[#797dfc]">
+              <div class="menu menu-horizontal px-5 gap-5 text-[#12132D]">
                 <div class="tooltip" data-tip="Home">
-                  <li><i class="fa-solid fa-house border border-[#999] text-xl p-4"></i></li>
+                  <li>
+                    <i
+                      class="fa-solid fa-house border border-[#999] text-xl p-4"
+                    ></i>
+                  </li>
                 </div>
                 <div class="tooltip" data-tip="Blog">
-                  <li><i class="fa-solid fa-pen border border-[#999] text-xl p-4"></i></li>
+                  <li>
+                    <i
+                      class="fa-solid fa-pen border border-[#999] text-xl p-4"
+                    ></i>
+                  </li>
                 </div>
                 <div class="tooltip" data-tip="Service">
-                  <li><i class="fa-solid fa-user border border-[#999] text-xl p-4"></i></li>
+                  <li>
+                    <i
+                      class="fa-solid fa-user border border-[#999] text-xl p-4"
+                    ></i>
+                  </li>
                 </div>
                 <div class="tooltip" data-tip="Contact">
-                  <li><i class="fa-solid fa-flag border border-[#999] text-xl p-4"></i></li>
+                  <li>
+                    <i
+                      class="fa-solid fa-flag border border-[#999] text-xl p-4"
+                    ></i>
+                  </li>
                 </div>
               </div>
             </div>
@@ -106,7 +122,7 @@
       <banner
         class="min-h-[500px] text-center md:text-left bg-image bg-[#12132D] rounded-3xl p-6 lg:p-24 flex items-center relative"
       >
-        <div class="lg:flex lg:justify-around w-full">
+        <div class="lg:flex lg:justify-around w-full rounded-3xl">
           <div class="text-white">
             <h1
               class="text-3xl lg:text-[64px] font-black leading-10 lg:leading-[80px]"
@@ -117,8 +133,7 @@
             <p
               class="text-[18px] lg:text-[20px] font-medium leading-[36px] py-6 max-w-[500px]"
             >
-              Share your favorite opinion and win and Vintage Forum coffee
-              mug!
+              Share your favorite opinion and win and Vintage Forum coffee mug!
             </p>
             <!-- Input / Button -->
             <div class="relative">
@@ -238,7 +253,10 @@
       <!-- Forum Section -->
       <section class="bg-[#12132D] rounded-3xl md:p-20 md:pb-10 py-5">
         <div class="hero-content flex-col lg:flex-row-reverse">
-          <img src="/images/joinforum.png" class="max-w-sm rounded-lg border-x-2 border-dashed" />
+          <img
+            src="/images/joinforum.png"
+            class="max-w-sm rounded-lg border-x-2 border-dashed"
+          />
           <div class="text-white text-center lg:text-left">
             <h1 class="text-3xl lg:text-5xl font-black font-mulish">
               Join Our Forum
@@ -271,7 +289,7 @@
         <!-- Posts Card -->
         <div class="pt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
           <!-- Single Card -->
-          <div class="card border-2 border-[#12132D26] ">
+          <div class="card border-2 border-[#12132D26]">
             <figure><img src="images/joinforum.png" alt="Shoes" /></figure>
             <div class="card-body">
               <div class="flex items-center gap-5 text-[#12132D99]">
