--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
+
   <body class="font-mulish">
     <!-- Header Area Start -->
     <header class="w-[95%] md:w-[80%] mx-auto">
@@ -187,52 +188,9 @@
         </div>
         <div class="mt-10 md:flex md:space-x-6">
           <!-- Discus-left -->
-          <div
-            class="md:w-2/3 p-6 md:p-8 lg:10 md:flex bg-[#797DFC1A] rounded-3xl space-y-2 md:space-x-6 border border-[#797DFC] font-inter"
-          >
-            <div class="w-1/5 md:w-2/5 h-auto bg-white rounded-2xl relative">
-              <img class="w-full" src="./images/joinforum.png" alt="" />
-              <div
-                class="h-5 w-5 rounded-full bg-green-500 absolute -top-2 -right-2"
-              ></div>
-            </div>
-            <div class="space-y-2">
-              <div class="w-full flex gap-10 text-sm font-medium">
-                <p># <span>Music</span></p>
-                <p>Author: <span>Name</span></p>
-              </div>
-              <h2 class="text-lg lg:text-xl font-bold font-mulish">
-                10 Kids Unaware of Their Halloween Costume
-              </h2>
-              <p
-                class="pb-5 border-b-2 border-dashed border-[#12132D40] text-[#12132D99]"
-              >
-                It's one thing to subject yourself to ha Halloween costume
-                mishap because, hey that's your prerogative
-              </p>
-              <div class="pt-2 lg:pt-5 flex justify-between">
-                <d|iv class="flex items-center gap-5">
-                  <div class="space-x-4">
-                    <i class="fa-regular fa-envelope"></i><span>560</span>
-                  </div>
-                  <div class="space-x-4">
-                    <i class="fa-regular fa-eye"></i><span>1560</span>
-                  </div>
-                  <div class="space-x-4">
-                    <i class="fa-regular fa-clock"></i><span>5 min</span>
-                  </div>
-                </d|iv>
-                <button class="rounded-full btn bg-green-500">
-                  <i
-                    class="fa-regular fa-envelope-open rounded-full text-white text-xs md:text-base"
-                  ></i>
-                </button>
-              </div>
-            </div>
-          </div>
-
+          <div id="card-container"></div>
           <!-- Discus-right -->
-          <div class="mt-10 md:mt-0 md:w-1/3 bg-[#12132D0D] rounded-3xl p-6">
+          <div class="my-10 md:mt-0 bg-[#12132D0D] rounded-3xl p-6">
             <div class="flex justify-between pb-4">
               <h2 class="text-xl font-bold">Title</h2>
               <div class="flex items-center space-x-3 text-2xl">
@@ -402,6 +360,46 @@
     <!-- Footer Area End -->
 
     <!-- Script -->
+
+    <!-- <div class="max-w-16 max-h-16 bg-white rounded-2xl relative">
+      <img class="w-full rounded-2xl" src="${post.image}" alt="" />
+      <div
+        class="p-2 rounded-full bg-green-500 absolute border-2 border-white -top-1 -right-1"
+      ></div>
+    </div>
+    <div class="space-y-4">
+      <div class="w-full flex gap-10 text-sm font-medium">
+        <p># <span>${post.category}</span></p>
+        <p>Author: <span>${post.author.name}</span></p>
+      </div>
+      <h2 class="text-lg lg:text-xl font-bold font-mulish">${post.title}</h2>
+      <p
+        class="pb-6 border-b-2 border-dashed border-[#12132D40] text-[#12132D99]"
+      >
+        ${post.description}
+      </p>
+      <div class="flex justify-between min-w-full lg:min-w-[700px]">
+        <div class="flex items-center gap-5">
+          <div class="space-x-4">
+            <i class="fa-regular fa-envelope"></i
+            ><span>${post.comment_count}</span>
+          </div>
+          <div class="space-x-4">
+            <i class="fa-regular fa-eye"></i><span>${post.view_count}</span>
+          </div>
+          <div class="space-x-4">
+            <i class="fa-regular fa-clock"></i
+            ><span>${post.posted_time} min</span>
+          </div>
+        </div>
+        <button class="rounded-full btn bg-[#797DFC]">
+          <i
+            class="fa-regular fa-envelope-open rounded-full text-white text-xs md:text-base"
+          ></i>
+        </button>
+      </div>
+    </div> -->
+
     <script src="./js/scripts.js"></script>
   </body>
 </html>
