--- a/index.html
+++ b/index.html
@@ -243,11 +243,12 @@
             and negative effects in various aspects of daily life.
           </p>
         </div>
-
         <!-- Posts Card -->
-        <div class="pt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div id="posts-container" class="pt-10 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+
+
           <!-- Single Card -->
-          <div class="card border-2 border-[#12132D26]">
+          <!-- <div class="card border-2 border-[#12132D26]">
             <figure><img src="images/joinforum.png" alt="Shoes" /></figure>
             <div class="card-body">
               <div class="flex items-center gap-5 text-[#12132D99]">
@@ -271,57 +272,8 @@
                 </div>
               </div>
             </div>
-          </div>
-          <div class="card border-2 border-[#12132D26]">
-            <figure><img src="images/joinforum.png" alt="Shoes" /></figure>
-            <div class="card-body">
-              <div class="flex items-center gap-5 text-[#12132D99]">
-                <i class="fa-regular fa-calendar-days"></i>
-                <p>21 Oct 1992</p>
-              </div>
-              <h2 class="card-title text-lg font-extrabold font-mulish">
-                What will a mars habitat force that impact in our daily life!!!
-              </h2>
-              <p class="pb-4">
-                Yes, you can run unit tests and view the results directly within
-                the app.
-              </p>
-              <div class="card-actions">
-                <div class="">
-                  <img src="images/Ellipse.png" alt="" />
-                </div>
-                <div>
-                  <h4 class="font-bold">Cameron Williamson</h4>
-                  <p>ROR Developer</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card border-2 border-[#12132D26]">
-            <figure><img src="images/joinforum.png" alt="Shoes" /></figure>
-            <div class="card-body">
-              <div class="flex items-center gap-5 text-[#12132D99]">
-                <i class="fa-regular fa-calendar-days"></i>
-                <p>21 Oct 1992</p>
-              </div>
-              <h2 class="card-title text-lg font-extrabold font-mulish">
-                What will a mars habitat force that impact in our daily life!!!
-              </h2>
-              <p class="pb-4">
-                Yes, you can run unit tests and view the results directly within
-                the app.
-              </p>
-              <div class="card-actions">
-                <div class="">
-                  <img src="images/Ellipse.png" alt="" />
-                </div>
-                <div>
-                  <h4 class="font-bold">Cameron Williamson</h4>
-                  <p>ROR Developer</p>
-                </div>
-              </div>
-            </div>
-          </div>
+          </div> -->
+
         </div>
       </section>
     </main>
@@ -360,46 +312,6 @@
     <!-- Footer Area End -->
 
     <!-- Script -->
-
-    <!-- <div class="max-w-16 max-h-16 bg-white rounded-2xl relative">
-      <img class="w-full rounded-2xl" src="${post.image}" alt="" />
-      <div
-        class="p-2 rounded-full bg-green-500 absolute border-2 border-white -top-1 -right-1"
-      ></div>
-    </div>
-    <div class="space-y-4">
-      <div class="w-full flex gap-10 text-sm font-medium">
-        <p># <span>${post.category}</span></p>
-        <p>Author: <span>${post.author.name}</span></p>
-      </div>
-      <h2 class="text-lg lg:text-xl font-bold font-mulish">${post.title}</h2>
-      <p
-        class="pb-6 border-b-2 border-dashed border-[#12132D40] text-[#12132D99]"
-      >
-        ${post.description}
-      </p>
-      <div class="flex justify-between min-w-full lg:min-w-[700px]">
-        <div class="flex items-center gap-5">
-          <div class="space-x-4">
-            <i class="fa-regular fa-envelope"></i
-            ><span>${post.comment_count}</span>
-          </div>
-          <div class="space-x-4">
-            <i class="fa-regular fa-eye"></i><span>${post.view_count}</span>
-          </div>
-          <div class="space-x-4">
-            <i class="fa-regular fa-clock"></i
-            ><span>${post.posted_time} min</span>
-          </div>
-        </div>
-        <button class="rounded-full btn bg-[#797DFC]">
-          <i
-            class="fa-regular fa-envelope-open rounded-full text-white text-xs md:text-base"
-          ></i>
-        </button>
-      </div>
-    </div> -->
-
     <script src="./js/scripts.js"></script>
   </body>
 </html>
